Tweaked CSS to fix menu button on collapsed nav

--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -47,6 +47,9 @@ body {
 			color: @page-links-hover;
 		}
 	}
+	.icon-bar {
+			background-color: @page-links;
+	}
 	.text-muted {
 		color: @page-text-muted;
 	}
